--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     </header>
     <main>
 
+        <!-- this codes are for webseries -->
         <ul id="movlist2024">
 
             <li class="mov">
@@ -191,7 +192,6 @@ Grant Feely
 Sean Rogers
                 </pre>
             </li>
-
             <li class="mov">
                 <div class="hline ">
                     <hr>
@@ -214,7 +214,6 @@ Randall J. Bacon
 Lilo Baier
                 </pre>
             </li>
-
             <li class="mov">
                 <div class="hline">
                     <hr>
@@ -237,7 +236,6 @@ Ravi Kishan
 Dayanand Shetty
                 </pre>
             </li>
-
             <li class="mov">
                 <div class="hline">
                     <hr>
@@ -260,7 +258,6 @@ Rajesh Sharma
 Manish Wadhwa
                 </pre>
             </li>
-
             <li class="mov">
                 <div class="hline">
                     <hr>
@@ -280,33 +277,147 @@ Tusharika Rajguru
 Raj Vitthalpura
                 </pre>
             </li>
-
+            <li class="mov">
+                <div class="hline">
+                    <hr>
+                </div>
+                <h2 class="shadow-text">Khichdi 2</h2>
+                <div class="image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQK0BZqdgNv2lnIaFr_Zg8btUm4HX0LUYggt3xZEEEzF4II1lnY1vZlABQ3&s=10" alt="Khichdi 2">
+                </div>
+                <pre class="text-box">
+<h3>CAST</h3>
+Anang Desai
+Rajeev Mehta
+Supriya Pathak
+Vandana Pathak
+Jamnadas Majethia
+Kirti Kulhari
+Shivika Rishi
+Arisht Jain
+Flora Saini
+Pratik Gandhi
+                </pre>
+            </li>
+            <li class="mov">
+                <div class="hline">
+                    <hr>
+                </div>
+                <h2 class="shadow-text">Haddi</h2>
+                <div class="image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM7Ga0GW94Ot65V85WJFE3wvf4DRWsb2Xz5W9ltVCU2Lanvsvt_aWvCWI&s=10" alt="Haddi">
+                </div>
+                <pre class="text-box">
+<h3>CAST</h3>
+Nawazuddin Siddiqui
+Anurag Kashyap
+Mohd. Zeeshan Ayyub
+Ila Arun
+Vipin Sharma
+Saurabh Sachdeva
+Rajesh Kumar
+Shriidhar Dubey.
+Saharsh Kumar Shukla
+Vishwanath Chatterjee
+                </pre>
+            </li>
+            <li class="mov">
+                <div class="hline">
+                    <hr>
+                </div>
+                <h2 class="shadow-text">Hurry Om Hurry</h2>
+                <div class="image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoyEEqkYRKmgA3MWGZo0qgVRd5Upv70AZFg1HaxYvA_3Ce7Bzafpsp1qI&s=10" alt="Hurry Om Hurry">
+                </div>
+                <pre class="text-box">
+<h3>CAST</h3>
+Siddharth Randeria
+Raunaq Kamdar
+Vyoma Nandi
+Malhaar Rathod
+Shivam Parekh
+Kalpesh Patel
+Ragi Jani
+Lopa Shah
+Dipika Raval
+Sandeep Kumaar
+                </pre>
+            </li>
+            <li class="mov">
+                <div class="hline">
+                    <hr>
+                </div>
+                <h2 class="shadow-text">The Exorcism</h2>
+                <div class="image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtH-xq2KHiKaa0FHq2G0a4MpZuFiuJy_286ibJjdmT5LlMX_Og7osiAkG3&s=10" alt="The Exorcism">
+                </div>
+                <pre class="text-box">
+<h3>CAST</h3>
+Russell Crowe
+Ryan Simpkins
+Sam Worthington
+Chloe Bailey
+Adam Goldberg
+Adrian Pasdar
+David Hyde Pierce
+Tracey Bonner
+Marcenae Lynette
+Joshua John Miller
+                </pre>
+            </li>
 
         </ul>
 
+        <!-- this codes are for webseries -->
         <ul id="weblist">
-            <li class="web ">
-                <div class="hline ">
+
+            <li class="web">
+                <div class="hline">
                     <hr>
                 </div>
-                <h2 class="shadow-text ">Boneyard</h2>
-                <div class="image ">
-                    <img src="https://m.media-amazon.com/images/M/MV5BNTc0MTE2M2MtOWVhYi00OWM1LWFhOWYtYzFlZDU2YTAwMGExXkEyXkFqcGc@._V1_.jpg " alt="Boneyard ">
+                <h2 class="shadow-text">Lucifer (All Seasons)</h2>
+                <div class="image">
+                    <img src="https://cdn.moviefone.com/image-assets/63174/uHpfjWUJI2gXQIIxjgAvOZWJORx.jpg?d=360x540&q=80" alt="Lucifer">
                 </div>
-                <pre class="web-box ">
+                <pre class="web-box">
 <h3>CAST</h3>
-Mel Gibson
-50 Cent
-Brian Van Holt
-Nora Zehetner
-Weston Cage
-Deena Bacon
-Jeremy Angel
-Courtney Akbar
-Randall J. Bacon
-Lilo Baier
+Tom Ellis
+Lauren German
+Kevin Alejandro
+D.B. Woodside
+Lesley-Ann Brandt
+Rachael Harris
+Aimee Garcia
+Tommy Stompornato
+Scarlett Estevez
+Tricia Helfer
+Charlotte
                 </pre>
             </li>
+            <li class="web">
+                <div class="hline">
+                    <hr>
+                </div>
+                <h2 class="shadow-text">Daredevil</h2>
+                <div class="image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMu67bPc8mBLxUaPZ6r9-Di8eCtGY0AVaSqgSPYWzcqrpwCytcTOebLEs&s=10" alt="Daredevil">
+                </div>
+                <pre class="web-box">
+<h3>CAST</h3>
+Charlie Cox 
+Deborah Ann Woll
+Elden Henson
+Vincent D'Onofrio
+Royce Johnson
+Geoffrey Cantor
+Jay Ali
+Jon Bernthal
+Stephen Rider
+Wilson Bethel
+Ayelet Zurer
+                </pre>
+            </li>
+
         </ul>
 
     </main>
@@ -334,7 +445,7 @@ Lilo Baier
             }
         });
 
-        <!-- // this script is for movies -->
+        <!-- // this script is for webseries -->
         document.addEventListener("DOMContentLoaded", function() {
             document.getElementById("weblist").style.display = "none";
         });
